# Despacito

./: .gitignore  README.md
PerformanceAnalysis/AVX/: CMakeLists.txt  main.cpp
PerformanceAnalysis/CPU/: CMakeLists.txt  main.cpp
PerformanceAnalysis/NPU/MatMat/: CMakeLists.txt  Makefile  dataflow.py  kernels.cc  test.cpp
PerformanceAnalysis/NPU/MatVec/: CMakeLists.txt  Makefile  dataflow.py  kernels.cc  test.cpp
include/: avx_utils.h  cpu_utils.h  npu_utils.h  utils.h
